--- a/produtos.html
+++ b/produtos.html
@@ -3,20 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Produtos - Barbearia Alura</title>
+
+        <link rel="stylesheet" href= "reset.css"
         <link rel="stylesheet" href="produtos.css">
+
     </head>
     <body>
        <header>
-     <h1><img src="logo.png"></h1>
+           <h1><img src="logo.png"></h1>
 
-     <ul>
-        <li><a href="index.html">Home </a></li>
-        <li><a href="produtos.html">produtos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-
-     </ul>
-    </header>
-
+        <nav>
+             <ul>
+               <li><a href="index.html">Home </a></li>
+               <li><a href="produtos.html">produtos</a></li>
+               <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+      </header>
     </body>
 </html>
 
